[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m2r job-shop classical"
version = "0.1"
dependencies = [
    "flake8",
    "pep8-naming",
    "flake8-docstrings",
    "pytest",
    "ipython",
    "ipdb",
    "debugpy",
    "numpy"
]


[tool.hatch.build.targets.wheel]
packages = ["HopfieldNetwork"]
